[package]
name = "cli_tools"
version = "0.1.0"
authors = ["layonthehorn <thomaspdressel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
clap = "2.33.3"
termcolor = "1.1.0"
users = "0.10"
chrono ="0.4.15"
walkdir = "2.3.1"